--- a/localisation/SoM_techtreereeview_l_russian.yml
+++ b/localisation/SoM_techtreereeview_l_russian.yml
@@ -1,6 +1,22 @@
 ﻿l_russian:
+ group_robot_title:0 "Роботы"
  FLESH_IS_WEAK_TITLE:0 "ПЛОТЬ СЛАБА"
  robot_folder:0 "Робототехника"
  robot_folder_desc:0 "Разработка автоматизированных военных технических систем"
  programmed_electronics:0 "Программируемая электроника"
  programmed_electronics_desc:0 "Получение знаний связанных с продвинутым освоением программируемых логических интегральных схем, способствует созданию более мощных электросхем и процессоров."
+ robotization_machine:0 "Роботизация"
+ robotization_machine_desc:0 "Благодаря роботизации, мы сможем возвращать утерянные конечности солдат, и быстрее возвращать их в бой."
+ quantum_processor:0 "Квантовый процессор"
+ quantum_processor_desc:0 "Прорыв в квантовой физике позволит нам использовать квантовый процессор, который обрабатывает данные в несколько раз быстрее, чем прошлые модели процессоров."
+ fiw_robians:0 "Робианцы"
+ fiw_robians_desc:0 "С продвинутыми технологиями роботизации, мы сможем превратить мобианца полностью в робота."
+ empty_robians_equipment_1:0 "Пустые робианцы"
+ empty_robians_equipment:0 "Пустые робианцы"
+ empty_robians_equipment_1_desc:0 "Материалы и детали для превращения мобианцев в робианцев."
+ empty_robians_equipment_desc:0 "Материалы и детали для превращения мобианцев в робианцев."
+ robians_equipment_1:0 "Робианцы"
+ robians_equipment:0 "Робианцы"
+ robians_equipment_1_desc:0 "Робианцы это бывшие мобианцы, подвергнувшиеся роботизации всего тела. Машины, с остатками разума живого, но строго подчиняющийся приказам."
+ robians_equipment_desc:0 "Робианцы это бывшие мобианцы, подвергнувшиеся роботизации всего тела. Машины, с остатками разума живого, но строго подчиняющийся приказам."
+ 
