--- a/localisation/loading_tips_l_russian.yml
+++ b/localisation/loading_tips_l_russian.yml
@@ -6,4 +6,5 @@
  LOADING_TIP_4:0 "«Я руководила работой Совета Нотхола, когда нам нужно было принять важное решение. Наше правительство не подчинялась интересам кого-то одного или другого.»\n- Салли Акорн"
  LOADING_TIP_5:0 "«Нападения на другие страны, грабеж и убийства не могут быть верным путем к миру!»\n- Тикал"
  LOADING_TIP_6:0 "«Я не прошу, и не буду просить всех заступиться за мою семью и мое королевство.»\n- Элиас Акорн"
- LOADING_TIP_7:0 "«Кто прочитал тот здохнет»\n- Белый Выпуклый Кот"
+ LOADING_TIP_7:0 "«Как правильно, что империей роботов управляет повелитель роботов!»\n- Нео Метал Соник"
+ LOADING_TIP_8:0 "«[ОТРЕДАКТИРОВАНО], [ДАННЫЕ УДАЛЕНЫ].»\n- Метал Слово"
